src/assets/sass/components/navbar.scss
.navbar {
  height: 6.071428571428571rem;
  border: 1px solid #ffffff;
  box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.06);

  .navbar-toggler {
    display: block;
    padding: 0.4rem;
  }

  .nav-link {
    transition: color 200ms ease;
    min-width: auto;
    border-bottom: 0.25rem solid transparent;
    font-size: 0.725rem;
    @include media-breakpoint-up(xl) {
      border-top: 0.25rem solid transparent;
      min-width: 5rem;
    }
    &.soon {
      cursor: pointer;
    }
  }
  .navbar-brand {
    svg {
      height: 1.5rem;
      width: auto;
      margin-right: 0.8rem;
    }
    span {
      margin-bottom: 1px;
      font-size: 1rem;
      font-weight: 200;
      padding-left: 0.6rem;
    }
    @include media-breakpoint-up(lg) {
      svg {
        height: 2.2rem;
      }
      span {
        font-size: 1.2rem;
      }
    }
  }

  .navbar-buttons .btn {
    padding-left: 0.8rem;
    padding-right: 0.8rem;
    height: 2.475rem;
    svg {
      width: auto;
    }
    @include media-breakpoint-down(sm) {
      padding-left: 0.55rem;
      padding-right: 0.55rem;
    }
  }

  .address-btn {
    background-color: #4aa8ff13;
    width: 185px;
    justify-content: center;
    border: 1px solid #ddeeff !important;
    @include media-breakpoint-down(md) {
      width: 48px;
      min-width: unset;
    }
    .hide {
      display: none;
    }
    .disconnect {
      display: none;
    }
    .address {
      display: flex;
    }
    svg {
      color: #4aa8ff;
      font-size: 16px;
      margin-right: 10px;
      @include media-breakpoint-down(md) {
        margin-right: 0;
      }
    }
    &:hover {
      color: #fff;
      background-color: #1392ff;
      border: 1px solid #007ded !important;
      background-image: unset;
      .disconnect {
        display: flex;
        justify-content: center;
        align-items: center;
      }
      .address {
        display: none;
      }
      > svg {
        display: none;
      }
      .hide {
        color: #fff;
        display: block;
      }
    }

    .navbar-address {
      width: 7rem;
      .ellipsis,
      .trim .left span,
      .trim .right span {
        font-size: 0.8rem;
        color: #4aa8ff;
      }
    }
  }

  @include media-breakpoint-up(sm) {
    .navbar-logo,
    .navbar-buttons {
      width: 30%;
    }

    .show-claim-mex-btn {
      width: 43% !important;
    }
  }
}
@include media-breakpoint-down(xs) {
  .navbar-nav {
    width: 100%;
    justify-content: end;
    .nav-pills {
      justify-content: space-between;
      .nav-item {
        flex-grow: 1;
        .nav-link {
          min-width: auto;
        }
      }
    }
  }
}

.navbar-nav {
  .connect-btns {
    .btn {
      @include media-breakpoint-down(sm) {
        width: 48px;
        .name {
          display: none;
        }
      }
    }
  }
}

@include media-breakpoint-down(sm) {
  .elrond-logo {
    width: 113px;
  }
}

